# unicode-xid

./: .travis.yml  CHANGELOG.md  COPYRIGHT  Cargo.toml  README.md  index.html  search-index.js
.github/workflows/: ci.yml
scripts/: unicode.py
src/: lib.rs  tables.rs  tests.rs
src/unicode_xid/: lib.rs.html  tables.rs.html
tests/: exhaustive_tests.rs
